infobar status and alignment fixes.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -51,6 +51,7 @@ body {
 	display: inline-block;
 	border-radius: 5px;
 	padding: 2px;
+	vertical-align: top;
 }
 
 #vpn_status {
@@ -271,7 +272,9 @@ body {
 	transition: height 500ms;
 	background-color: black;
 	box-shadow: 0px 0px 5px 5px #6e6a6a;
-padding: 5px;border-radius: 5px;}
+	padding: 5px;
+	border-radius: 5px;
+}
 
 div#commands {}
 
